sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-decisions-definitions/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-decisions
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions
    sas.com/admin: namespace
  name: sas-decisions
spec:
  host: $(INGRESS_HOST)
  path: /decisions
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-decisions
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-decisions
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions
    sas.com/admin: namespace
  name: sas-decisions-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /decisions
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-decisions
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-treatmentDefinitions
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-treatment-definitions
    sas.com/admin: namespace
  name: sas-treatment-definitions
spec:
  host: $(INGRESS_HOST)
  path: /treatmentDefinitions
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-treatment-definitions
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-treatmentDefinitions
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-treatment-definitions
    sas.com/admin: namespace
  name: sas-treatment-definitions-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /treatmentDefinitions
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-treatment-definitions
  wildcardPolicy: Subdomain
